# flant5-d

./: .gitignore  .gitmodules  README.md  build-cpp-libs.sh  dub.sdl
cpp/: README.md
cpp/ct2wrap/: CMakeLists.txt  ct2wrap.cpp  ct2wrap.h
cpp/ct2wrap_test/: CMakeLists.txt  main.cpp
example/: .gitignore  dub.sdl  example_prompt.txt  example_prompt_translate_ru2en.txt
example/source/: app.d
source/flant5/: ct2wrap.d  flant5.d  package.d
unused/: build-cpp-libs_old.sh
